cmake_minimum_required(VERSION 3.6)

project (cprogramming LANGUAGES C)

add_executable(example1.1 src/example1.1/src/example1.1.c)
set_property(TARGET example1.1 PROPERTY C_STANDARD 11)
install(TARGETS example1.1 DESTINATION bin)

add_executable(example1.2 src/example1.2/src/example1.2.c)
set_property(TARGET example1.2 PROPERTY C_STANDARD 11)
install(TARGETS example1.2 DESTINATION bin)

add_executable(example1.3 src/example1.3/src/example1.3.c)
set_property(TARGET example1.3 PROPERTY C_STANDARD 11)
install(TARGETS example1.3 DESTINATION bin)

add_executable(example1.4 src/example1.4/src/example1.4.c)
set_property(TARGET example1.4 PROPERTY C_STANDARD 11)
install(TARGETS example1.4 DESTINATION bin)

add_executable(example2.1 src/example2.1/src/example2.1.c)
set_property(TARGET example2.1 PROPERTY C_STANDARD 11)
install(TARGETS example2.1 DESTINATION bin)

add_executable(example2.10 src/example2.10/src/example2.10.c)
set_property(TARGET example2.10 PROPERTY C_STANDARD 11)
install(TARGETS example2.10 DESTINATION bin)

add_executable(example2.11 src/example2.11/src/example2.11.c)
set_property(TARGET example2.11 PROPERTY C_STANDARD 11)
install(TARGETS example2.11 DESTINATION bin)

add_executable(example2.2 src/example2.2/src/example2.2.c)
set_property(TARGET example2.2 PROPERTY C_STANDARD 11)
install(TARGETS example2.2 DESTINATION bin)

add_executable(example2.3 src/example2.3/src/example2.3.c)
set_property(TARGET example2.3 PROPERTY C_STANDARD 11)
install(TARGETS example2.3 DESTINATION bin)

add_executable(example2.4 src/example2.4/src/example2.4.c)
set_property(TARGET example2.4 PROPERTY C_STANDARD 11)
install(TARGETS example2.4 DESTINATION bin)

add_executable(example2.5 src/example2.5/src/example2.5.c)
set_property(TARGET example2.5 PROPERTY C_STANDARD 11)
install(TARGETS example2.5 DESTINATION bin)

add_executable(example2.6 src/example2.6/src/example2.6.c)
set_property(TARGET example2.6 PROPERTY C_STANDARD 11)
install(TARGETS example2.6 DESTINATION bin)

add_executable(example2.7 src/example2.7/src/example2.7.c)
set_property(TARGET example2.7 PROPERTY C_STANDARD 11)
install(TARGETS example2.7 DESTINATION bin)

add_executable(example2.8 src/example2.8/src/example2.8.c)
set_property(TARGET example2.8 PROPERTY C_STANDARD 11)
install(TARGETS example2.8 DESTINATION bin)

add_executable(example2.9 src/example2.9/src/example2.9.c)
set_property(TARGET example2.9 PROPERTY C_STANDARD 11)
install(TARGETS example2.9 DESTINATION bin)

add_executable(example3.1 src/example3.1/src/example3.1.c)
set_property(TARGET example3.1 PROPERTY C_STANDARD 11)
install(TARGETS example3.1 DESTINATION bin)

add_executable(example3.10 src/example3.10/src/example3.10.c)
set_property(TARGET example3.10 PROPERTY C_STANDARD 11)
install(TARGETS example3.10 DESTINATION bin)

add_executable(example3.2 src/example3.2/src/example3.2.c)
set_property(TARGET example3.2 PROPERTY C_STANDARD 11)
install(TARGETS example3.2 DESTINATION bin)

add_executable(example3.3 src/example3.3/src/example3.3.c)
set_property(TARGET example3.3 PROPERTY C_STANDARD 11)
install(TARGETS example3.3 DESTINATION bin)

add_executable(example3.4 src/example3.4/src/example3.4.c)
set_property(TARGET example3.4 PROPERTY C_STANDARD 11)
install(TARGETS example3.4 DESTINATION bin)

add_executable(example3.5 src/example3.5/src/example3.5.c)
set_property(TARGET example3.5 PROPERTY C_STANDARD 11)
install(TARGETS example3.5 DESTINATION bin)

add_executable(example3.6 src/example3.6/src/example3.6.c)
set_property(TARGET example3.6 PROPERTY C_STANDARD 11)
install(TARGETS example3.6 DESTINATION bin)

add_executable(example3.7 src/example3.7/src/example3.7.c)
set_property(TARGET example3.7 PROPERTY C_STANDARD 11)
install(TARGETS example3.7 DESTINATION bin)

add_executable(example3.8 src/example3.8/src/example3.8.c)
set_property(TARGET example3.8 PROPERTY C_STANDARD 11)
install(TARGETS example3.8 DESTINATION bin)

add_executable(example3.9 src/example3.9/src/example3.9.c)
set_property(TARGET example3.9 PROPERTY C_STANDARD 11)
install(TARGETS example3.9 DESTINATION bin)

add_executable(example4.1 src/example4.1/src/example4.1.c)
set_property(TARGET example4.1 PROPERTY C_STANDARD 11)
install(TARGETS example4.1 DESTINATION bin)

add_executable(example4.10 src/example4.10/src/example4.10.c src/example4.10/src/secondfile.c)
set_property(TARGET example4.10 PROPERTY C_STANDARD 11)
install(TARGETS example4.10 DESTINATION bin)

#add_executable(example4.11 src/example4.11/src/example4.11.c)
#set_property(TARGET example4.11 PROPERTY C_STANDARD 11)
#install(TARGETS example4.11 DESTINATION bin)

#add_executable(example4.12 src/example4.12/src/example4.12.c)
#set_property(TARGET example4.12 PROPERTY C_STANDARD 11)
#install(TARGETS example4.12 DESTINATION bin)

add_executable(example4.2 src/example4.2/src/example4.2.c)
set_property(TARGET example4.2 PROPERTY C_STANDARD 11)
install(TARGETS example4.2 DESTINATION bin)

add_executable(example4.3 src/example4.3/src/example4.3.c)
set_property(TARGET example4.3 PROPERTY C_STANDARD 11)
install(TARGETS example4.3 DESTINATION bin)

add_executable(example4.4 src/example4.4/src/example4.4.c)
set_property(TARGET example4.4 PROPERTY C_STANDARD 11)
install(TARGETS example4.4 DESTINATION bin)

add_executable(example4.5 src/example4.5/src/example4.5.c )
set_property(TARGET example4.5 PROPERTY C_STANDARD 11)
install(TARGETS example4.5 DESTINATION bin)

add_executable(example4.6 src/example4.6/src/example4.6.c)
set_property(TARGET example4.6 PROPERTY C_STANDARD 11)
install(TARGETS example4.6 DESTINATION bin)

add_executable(example4.7 src/example4.7/src/example4.7.c)
set_property(TARGET example4.7 PROPERTY C_STANDARD 11)
install(TARGETS example4.7 DESTINATION bin)

add_executable(example4.8 src/example4.8/src/example4.8.c)
set_property(TARGET example4.8 PROPERTY C_STANDARD 11)
install(TARGETS example4.8 DESTINATION bin)

add_executable(example4.9 src/example4.9/src/example4.9.c src/example4.9/src/secondfile.c)
set_property(TARGET example4.9 PROPERTY C_STANDARD 11)
install(TARGETS example4.9 DESTINATION bin)

add_executable(example5.1 src/example5.1/src/example5.1.c)
set_property(TARGET example5.1 PROPERTY C_STANDARD 11)
install(TARGETS example5.1 DESTINATION bin)

add_executable(example5.10 src/example5.10/src/example5.10.c)
set_property(TARGET example5.10 PROPERTY C_STANDARD 11)
install(TARGETS example5.10 DESTINATION bin)

add_executable(example5.11 src/example5.11/src/example5.11.c)
set_property(TARGET example5.11 PROPERTY C_STANDARD 11)
install(TARGETS example5.11 DESTINATION bin)

add_executable(example5.12 src/example5.12/src/example5.12.c)
set_property(TARGET example5.12 PROPERTY C_STANDARD 11)
install(TARGETS example5.12 DESTINATION bin)

add_executable(example5.13 src/example5.13/src/example5.13.c)
set_property(TARGET example5.13 PROPERTY C_STANDARD 11)
install(TARGETS example5.13 DESTINATION bin)

add_executable(example5.14 src/example5.14/src/example5.14.c)
set_property(TARGET example5.14 PROPERTY C_STANDARD 11)
install(TARGETS example5.14 DESTINATION bin)

add_executable(example5.15 src/example5.15/src/example5.15.c)
set_property(TARGET example5.15 PROPERTY C_STANDARD 11)
install(TARGETS example5.15 DESTINATION bin)

add_executable(example5.16 src/example5.16/src/example5.16.c)
set_property(TARGET example5.16 PROPERTY C_STANDARD 11)
install(TARGETS example5.16 DESTINATION bin)

#add_executable(example5.17 src/example5.17/src/example5.17.c)
#set_property(TARGET example5.17 PROPERTY C_STANDARD 11)
#install(TARGETS example5.17 DESTINATION bin)

add_executable(example5.2 src/example5.2/src/example5.2.c)
set_property(TARGET example5.2 PROPERTY C_STANDARD 11)
install(TARGETS example5.2 DESTINATION bin)

add_executable(example5.3 src/example5.3/src/example5.3.c)
set_property(TARGET example5.3 PROPERTY C_STANDARD 11)
install(TARGETS example5.3 DESTINATION bin)

add_executable(example5.4 src/example5.4/src/example5.4.c)
set_property(TARGET example5.4 PROPERTY C_STANDARD 11)
install(TARGETS example5.4 DESTINATION bin)

add_executable(example5.5 src/example5.5/src/example5.5.c)
set_property(TARGET example5.5 PROPERTY C_STANDARD 11)
install(TARGETS example5.5 DESTINATION bin)

add_executable(example5.6 src/example5.6/src/example5.6.c)
set_property(TARGET example5.6 PROPERTY C_STANDARD 11)
install(TARGETS example5.6 DESTINATION bin)

add_executable(example5.7 src/example5.7/src/example5.7.c)
set_property(TARGET example5.7 PROPERTY C_STANDARD 11)
install(TARGETS example5.7 DESTINATION bin)

add_executable(example5.8 src/example5.8/src/example5.8.c)
set_property(TARGET example5.8 PROPERTY C_STANDARD 11)
install(TARGETS example5.8 DESTINATION bin)

#add_executable(example5.9 src/example5.9/src/example5.9.c)
#set_property(TARGET example5.9 PROPERTY C_STANDARD 11)
#install(TARGETS example5.9 DESTINATION bin)

add_executable(example6.1 src/example6.1/src/example6.1.c)
set_property(TARGET example6.1 PROPERTY C_STANDARD 11)
install(TARGETS example6.1 DESTINATION bin)

#add_executable(example6.10 src/example6.10/src/example6.10.c)
#set_property(TARGET example6.10 PROPERTY C_STANDARD 11)
#install(TARGETS example6.10 DESTINATION bin)

add_executable(example6.11 src/example6.11/src/example6.11.c)
set_property(TARGET example6.11 PROPERTY C_STANDARD 11)
install(TARGETS example6.11 DESTINATION bin)

add_executable(example6.12 src/example6.12/src/example6.12.c)
set_property(TARGET example6.12 PROPERTY C_STANDARD 11)
install(TARGETS example6.12 DESTINATION bin)

#add_executable(example6.13 src/example6.13/src/example6.13.c)
#set_property(TARGET example6.13 PROPERTY C_STANDARD 11)
#install(TARGETS example6.13 DESTINATION bin)

add_executable(example6.14 src/example6.14/src/example6.14.c)
set_property(TARGET example6.14 PROPERTY C_STANDARD 11)
install(TARGETS example6.14 DESTINATION bin)

add_executable(example6.15 src/example6.15/src/example6.15.c)
set_property(TARGET example6.15 PROPERTY C_STANDARD 11)
install(TARGETS example6.15 DESTINATION bin)

#add_executable(example6.16 src/example6.16/src/example6.16.c)
#set_property(TARGET example6.16 PROPERTY C_STANDARD 11)
#install(TARGETS example6.16 DESTINATION bin)

#add_executable(example6.17 src/example6.17/src/example6.17.c)
#set_property(TARGET example6.17 PROPERTY C_STANDARD 11)
#install(TARGETS example6.17 DESTINATION bin)

#add_executable(example6.18 src/example6.18/src/example6.18.c)
#set_property(TARGET example6.18 PROPERTY C_STANDARD 11)
#install(TARGETS example6.18 DESTINATION bin)

add_executable(example6.2 src/example6.2/src/example6.2.c)
set_property(TARGET example6.2 PROPERTY C_STANDARD 11)
install(TARGETS example6.2 DESTINATION bin)

#add_executable(example6.3 src/example6.3/src/example6.3.c)
#set_property(TARGET example6.3 PROPERTY C_STANDARD 11)
#install(TARGETS example6.3 DESTINATION bin)

#add_executable(example6.4 src/example6.4/src/example6.4.c)
#set_property(TARGET example6.4 PROPERTY C_STANDARD 11)
#install(TARGETS example6.4 DESTINATION bin)

add_executable(example6.5 src/example6.5/src/example6.5.c)
set_property(TARGET example6.5 PROPERTY C_STANDARD 11)
install(TARGETS example6.5 DESTINATION bin)

add_executable(example6.6 src/example6.6/src/example6.6.c)
set_property(TARGET example6.6 PROPERTY C_STANDARD 11)
install(TARGETS example6.6 DESTINATION bin)

#add_executable(example6.7 src/example6.7/src/example6.7.c)
#set_property(TARGET example6.7 PROPERTY C_STANDARD 11)
#install(TARGETS example6.7 DESTINATION bin)

add_executable(example6.8 src/example6.8/src/example6.8.c)
set_property(TARGET example6.8 PROPERTY C_STANDARD 11)
install(TARGETS example6.8 DESTINATION bin)

add_executable(example6.9 src/example6.9/src/example6.9.c)
set_property(TARGET example6.9 PROPERTY C_STANDARD 11)
install(TARGETS example6.9 DESTINATION bin)

add_executable(example7.1 src/example7.1/src/example7.1.c)
set_property(TARGET example7.1 PROPERTY C_STANDARD 11)
install(TARGETS example7.1 DESTINATION bin)

#add_executable(example7.2 src/example7.2/src/example7.2.c)
#set_property(TARGET example7.2 PROPERTY C_STANDARD 11)
#install(TARGETS example7.2 DESTINATION bin)

#add_executable(example7.3 src/example7.3/src/example7.3.c)
#set_property(TARGET example7.3 PROPERTY C_STANDARD 11)
#install(TARGETS example7.3 DESTINATION bin)

add_executable(example8.1 src/example8.1/src/example8.1.c)
set_property(TARGET example8.1 PROPERTY C_STANDARD 11)
install(TARGETS example8.1 DESTINATION bin)

#add_executable(example8.2 src/example8.2/src/example8.2.c)
#set_property(TARGET example8.2 PROPERTY C_STANDARD 11)
#install(TARGETS example8.2 DESTINATION bin)

add_executable(example8.3 src/example8.3/src/example8.3.c)
set_property(TARGET example8.3 PROPERTY C_STANDARD 11)
install(TARGETS example8.3 DESTINATION bin)

#add_executable(example8.4 src/example8.4/src/example8.4.c)
#set_property(TARGET example8.4 PROPERTY C_STANDARD 11)
#install(TARGETS example8.4 DESTINATION bin)

#add_executable(example8.5 src/example8.5/src/example8.5.c)
#set_property(TARGET example8.5 PROPERTY C_STANDARD 11)
#install(TARGETS example8.5 DESTINATION bin)

add_executable(example8.6 src/example8.6/src/example8.6.c)
set_property(TARGET example8.6 PROPERTY C_STANDARD 11)
install(TARGETS example8.6 DESTINATION bin)

add_executable(example9.1 src/example9.1/src/example9.1.c)
set_property(TARGET example9.1 PROPERTY C_STANDARD 11)
install(TARGETS example9.1 DESTINATION bin)

#add_executable(example9.2 src/example9.2/src/example9.2.c)
#set_property(TARGET example9.2 PROPERTY C_STANDARD 11)
#install(TARGETS example9.2 DESTINATION bin)

add_executable(example9.3 src/example9.3/src/example9.3.c)
set_property(TARGET example9.3 PROPERTY C_STANDARD 11)
install(TARGETS example9.3 DESTINATION bin)

add_executable(example9.4 src/example9.4/src/example9.4.c)
set_property(TARGET example9.4 PROPERTY C_STANDARD 11)
install(TARGETS example9.4 DESTINATION bin)

#add_executable(example9.5 src/example9.5/src/example9.5.c)
#set_property(TARGET example9.5 PROPERTY C_STANDARD 11)
#install(TARGETS example9.5 DESTINATION bin)

add_executable(example9.6 src/example9.6/src/example9.6.c)
set_property(TARGET example9.6 PROPERTY C_STANDARD 11)
install(TARGETS example9.6 DESTINATION bin)
